# interactive_1d_fitting

./: .gitignore  Makefile  README.adoc  pyproject.toml  requirements.txt  setup.py
examples/: gaussian_sum_example.py
ivfit/: interactive_guess.py  models.py  parameter.py  util.py
lmf_gui/: __init__.py  interactive_guess.py  models.py
